# nano-graphrag

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  20260409-changelog.md  20260414-phase2-4-leftover-tasks.md  CLAUDE.md  CONTRIBUTING.md  azure.env.example  config.example.yaml  pyproject.toml  readme.md
.github/workflows/: test.yml
bench/: __init__.py  __main__.py  cache.py  compare.py  dspy_tune.py  registry.py  results.py  run.py  runner.py
bench/datasets/: __init__.py  datasets.py
bench/metrics/: __init__.py  metrics.py
bench/retrievers/: __init__.py  base.py  hipporag_ppr.py  hybrid.py  multihop.py
bench/techniques/: __init__.py  adaptive_router.py  edge_confidence.py  raptor.py  reranker.py
docs/: 20260317-architecture.md  README.md  ROADMAP.md
docs/architecture/: architecture.md
docs/archive/: README.md
docs/archive/analyses/: 20260323-phase1-gap-analysis.md
docs/archive/architecture/: entity-grounded-rag-design.md
docs/archive/benchmarks/: 20260411-multihop-rag-issues.md  benchmark-en.md  benchmark-usage.md  benchmark-zh.md  experiments-quick-start.md
docs/archive/plans/: 2026-03-23-phase1-completion.md  2026-03-23-phase3-multihop-rag-verification.md  2026-03-24-benchmark-configs-complete.md  2026-03-24-openrouter-integration-complete.md  2026-03-24-phase3-verification-complete.md  2026-03-24-task0-prerequisites-verified.md
docs/archive/research/: 20260318-incremental-community-update-research.md
docs/archive/roadmap/: benchmark-roadmap.md  technical-roadmap.md
docs/archive/verification/: 20260324-phase3-verification-report.md
docs/benchmarks/: README.md
docs/guides/: faq.md  neo4j.md
docs/verification/: phase3_verification_report.md
examples/: graphml_visualize.py  using_deepseek_api_as_llm+glm_api_as_embedding.py  using_dspy_entity_extraction.py  using_faiss_as_vextorDB.py  using_milvus_as_vectorDB.py  using_ollama_new.py  using_qdrant_as_vectorDB.py  using_vllm.py
examples/benchmarks/: dspy_entity.py  hnsw_vs_nano_vector_storage.py  md5_vs_xxhash.py  run_experiment.py
examples/benchmarks/configs/: 2wiki_multihopqa.yaml  2wiki_test_fixed.yaml  example.yaml  multihop_musique.yaml  multihop_musique_small.yaml  multihop_musique_tiny.yaml  multihop_rag_full.yaml
experiments/: OPENROUTER_SETUP.md  README.md  SELECTING_MODELS.md  ablation_chunker.yaml  benchmark_2wiki.yaml  benchmark_2wiki_openrouter.yaml  benchmark_adaptive.yaml  benchmark_hipporag.yaml  benchmark_hotpotqa.yaml  benchmark_hotpotqa_openrouter.yaml  benchmark_hybrid.yaml  benchmark_multihop.yaml  benchmark_multihop_rag.yaml  benchmark_multihop_rag_openrouter.yaml  benchmark_musique.yaml  benchmark_musique_openrouter.yaml  benchmark_raptor.yaml  compare_results.py  compare_results.sh  run_all_benchmarks.sh  run_all_benchmarks_openrouter.sh  test_my_env_setup.py  test_openrouter.py  validate_setup.py
nano_graphrag/: __init__.py  _entity_grounded_query.py  _entity_registry.py  _llm.py  _llm_litellm.py  _op.py  _schemas.py  _splitter.py  _utils.py  base.py  graphrag.py  graphrag_insert.py  graphrag_query.py  graphrag_runtime.py  prompt.py
nano_graphrag/_benchmark/: README.md  __init__.py  cache.py  datasets.py  metrics.py  runner.py
nano_graphrag/_ops/: __init__.py  chunking.py  community.py  extraction.py  extraction_common.py  extraction_gliner.py  extraction_legacy.py  extraction_rebuild.py  extraction_structured.py  extraction_writeback.py  query.py
nano_graphrag/_storage/: __init__.py  gdb_neo4j.py  gdb_networkx.py  gdb_networkx_clustering.py  gdb_networkx_utils.py  gdb_sqlite.py  kv_json.py  vdb_hnswlib.py  vdb_nanovectordb.py
nano_graphrag/contrib/: __init__.py
nano_graphrag/contrib/dspy/: __init__.py
nano_graphrag/entity_extraction/: __init__.py  extract.py  metric.py  module.py
test/: entity_grounded_prototype.py
tests/: __init__.py  mock_data.txt  test_entity_grounded_contract.py  test_extraction_ops.py  test_hnsw_vector_storage.py  test_incremental_insert.py  test_json_parsing.py  test_kv_storage.py  test_litellm.py  test_neo4j_storage.py  test_networkx_storage.py  test_rag.py  test_refactor_seams.py  test_splitter.py  test_sqlite_graph_storage.py
tests/benchmark/: __init__.py  test_adaptive_router.py  test_cache.py  test_compare.py  test_config.py  test_cross_encoder_reranker.py  test_datasets.py  test_dspy_tuner.py  test_edge_confidence.py  test_hipporag_retriever.py  test_hybrid_retriever.py  test_metrics.py  test_multihop_retriever.py  test_raptor_retriever.py  test_registry.py  test_results.py  test_retrievers.py  test_runner.py  test_runner_multihop.py
tests/benchmark/integration/: test_multihop_e2e.py
tests/entity_extraction/: test_extract.py  test_metric.py  test_module.py
tests/fixtures/: mock_cache.json  sample_corpus.json  sample_questions.json
