[project]
name = "nano-graphrag"
version = "0.0.9.0"
description = "A simple, easy-to-hack GraphRAG implementation"
readme = "README.md"
authors = [{name = "Jianbai Ye"}]
requires-python = ">=3.9"
license = {text = "MIT"}

# Core dependencies - required for basic functionality
dependencies = [
    "future>=1.0.0",
    "numpy>=1.26.0",
    "openai",
    "tiktoken>=0.7.0",
    "networkx>=3.0",
    "igraph>=0.11.0",
    "leidenalg>=0.10.0",
    "node2vec>=0.4.0",
    "hnswlib>=0.8.0",
    "msgpack>=1.0.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "litellm>=1.82.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "xxhash",
]

# Optional dependencies - install based on needs
[project.optional-dependencies]
# Vector storage backends (nano-vectordb is optional fallback)
vector-db = [
    "nano-vectordb",
]

# Benchmark evaluation (LLM-as-judge metrics)
benchmark = [
    "datasets>=2.0.0",
    "ragas>=0.1.0",
]

evaluation = [
    "datasets>=2.0.0",
]

anthropic = ["anthropic"]
aws = ["aioboto3"]

# Storage backends
neo4j = ["neo4j"]
milvus = ["pymilvus"]
qdrant = ["qdrant-client"]

# Local embedding models (optional - LiteLLM can call remote)
local-embedding = [
    "sentence-transformers",
    "transformers",
]

# Advanced retrieval techniques
advanced-retrieval = [
    "dspy-ai>=2.5.0",
    "scikit-learn>=1.3.0",
]

# Entity extraction backends
gliner = [
    "gliner2",
]

# Tokenizer support (for huggingface tokenizer)
tokenizer = [
    "transformers",
]

# Development dependencies
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

# All extras combined
all = [
    "nano-graphrag[vector-db,anthropic,aws,neo4j,milvus,qdrant,local-embedding,advanced-retrieval,tokenizer,dev]",
]

# Convenience: sensible defaults for most users
default = [
    "nano-graphrag[neo4j]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["examples/**", "tests/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require live external services or credentials",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
